--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
        
         {
             "name": "Python: finetuning",
@@ -19,6 +20,14 @@
             "request": "launch",
             "program": "${workspaceFolder}/peft/inference.py",
             "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.venv/bin/python3.11"
+        },
+        {
+            "name":"Python: generator",
+            "type": "debugpy",
+            "request":"launch",
+            "program":"${workspaceFolder}/image/generator.py",
+            "console":"integratedTerminal",
             "python": "${workspaceFolder}/.venv/bin/python3.11"
         }
     ]
