--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
         {
             "name":"Python: audio cli",
             "type": "debugpy",
             "request":"launch",
             "program":"${workspaceFolder}/audio/cli.py",
+            "args": [
+                // "--proxy",
+                // "http://localhost:7890",
+                "--local_model_path",
+                "${workspaceFolder}/audio/models/models--stabilityai-stable-audio-open-1.0"
+                // 使用环境变量存储token，而不是硬编码
+                // "--token",
+                // "${env:HUGGING_FACE_TOKEN}"
+            ],
             "console":"integratedTerminal",
             "python": "${workspaceFolder}/.venv/bin/python3.11"
         },
