--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,24 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+        {
+            "name":"Python: audio video",
+            "type": "debugpy",
+            "request":"launch",
+            "program":"${workspaceFolder}/audio/video.py",
+            "args": [
+                // "--proxy",
+                // "http://localhost:7890",
+                // "--local_model_path",
+                // "${workspaceFolder}/audio/models/models--stabilityai-stable-audio-open-1.0"
+                // 使用环境变量存储token，而不是硬编码
+                // "--token",
+                // "${env:HUGGING_FACE_TOKEN}"
+            ],
+            "console":"integratedTerminal",
+            "python": "${workspaceFolder}/.venv/bin/python3.11"
+        },
         {
             "name":"Python: audio cli",
             "type": "debugpy",
